# os_lab_5

doc/: report.docx  ~WRL2649.tmp
src/: CMakeLists.txt  main.cpp  test1.c  test1.cpp  test2.c  test2.cpp
src/lib/: vecmd5.c  vecmd5.cpp  vecmd5.h
